# hpip

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  coverage.yml  release.yml
src/: config.rs  error.rs  main.rs  options.rs  port.rs  tls.rs
src/encoding/: compress.rs  mod.rs
src/handler/: archive.rs  delete.rs  get.rs  head.rs  mod.rs  options_handler.rs  put.rs  rfsapi.rs  trace.rs  webdav.rs
src/hoops/: additional_headers.rs  auth.rs  logging.rs  mod.rs
src/middleware/: additional_headers.rs  bandwidth.rs  logging.rs  mod.rs
src/util/: display.rs  file.rs  html.rs  mod.rs  path.rs  time.rs  webdav.rs
src/util/os/: mod.rs  unix.rs  windows.rs
